--- a/testweb1/public_html/index.html
+++ b/testweb1/public_html/index.html
@@ -33,7 +33,13 @@ and open the template in the editor.
               <a href = "https://www.fenikssfun.com/bildes/aktiva-ziema-latvija-2751">Info saite</a>
           </p>
           <p>
-              <a href = "adreses.html">Saite uz adresem</a>
+             <a href = "adreses.html">Saite uz adresem</a>
+          </p>
+          <p>
+              <a href = "forma.html" target = "blank"> Saite uz formam</a>
+          </p>
+          <p>
+              <a href = "citaLapa.html" target = "blank"> Saite uz citu lapu</a>
           </p>
           <img src="images/ziemas_prieki.jpg" alt=""/>
            
