--- a/testweb1/public_html/forma.html
+++ b/testweb1/public_html/forma.html
@@ -26,7 +26,7 @@
         </div>
         <div>2.skaitlis<input type="text" name="sk2"> </div>
         <hr>
-        <div>Rezultāts<input name="rez"> </div>
+        <div>Rezultāts<input name="rez"> <input value="RESET" type="reset"> </div>
     </form>
 </body>
 </html>
