--- a/testweb1/public_html/index.html
+++ b/testweb1/public_html/index.html
@@ -41,6 +41,12 @@ and open the template in the editor.
           <p>
               <a href = "citaLapa.html" target = "blank"> Saite uz citu lapu</a>
           </p>
+          <p>
+              <a href = "darbibas.html" target = "blank"> Saite uz darbibam</a>
+          </p>
+          <p>
+              <a href = "skola.html" target = "blank"> Saite uz skolu</a>
+          </p>
           <img src="images/ziemas_prieki.jpg" alt=""/>
            
     </body>
