--- a/testweb1/public_html/skola.html
+++ b/testweb1/public_html/skola.html
@@ -80,8 +80,8 @@ footer {
 
 <section>
   <nav>
+    Satura rādītājs
     <ul>
-      <li><a href="#saturs">Satura rādītājs</a></li>
       <li><a href="#vesture">Vēsture</a></li>
       <li><a href="#nosaukumi">Skolas nosaukumu maiņas</a></li>
       <li><a href="#vaditaji">Zināmie skolas vadītāji (1229—1804)</a></li>
